--- a/style.css
+++ b/style.css
@@ -90,3 +90,41 @@ h1 {
     color: #F9FAF8;
     margin: 10px;
 }
+
+/* -- First Section -- */
+
+h2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 30px;
+}
+
+.four-columns {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 10px;
+    width: 125px;
+}
+
+.box {
+    border-color:#3882f6;
+    border-radius: 8px;
+    border-width: 3px;
+    border-style: solid;
+    height: 125px;
+    width: 125px;
+}
+
+.column p {
+    margin-top: 10px;
+    text-align: center;
+}
