--- a/style.css
+++ b/style.css
@@ -100,6 +100,10 @@ h2 {
     margin: 30px;
 }
 
+.second-section {
+    padding-bottom: 100px;
+}
+
 .four-columns {
     display: flex;
     align-items: center;
