--- a/style.css
+++ b/style.css
@@ -153,3 +153,47 @@ h2 {
     text-align: right;
     margin-top: 10px;
 }
+
+/* -- Third Section -- */
+
+.fourth-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 50px;
+}
+
+.long-box {
+    background-color: #3882f6;
+    padding: 50px;
+    border-radius: 8px;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.fourth-left {
+    margin-right: 50px;
+    display: flex;
+    flex-direction: column;
+}
+
+.fourth-left p {
+    font-size: 12px;
+    font-weight: lighter;
+    opacity: 0.8;
+}
+
+.fourth-right button {
+    border-color: white;
+    border-width: 2px;
+    border-radius: 8px;
+    border-style: solid;
+    background-color: transparent;
+    color: white;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
