Add css for footer

--- a/style.css
+++ b/style.css
@@ -197,3 +197,17 @@ h2 {
     padding-left: 20px;
     padding-right: 20px;
 }
+
+/* -- Footer -- */
+
+.footer {
+    background-color: #1F2937;
+    display: flex;
+    justify-content: center;
+    align-items: content;
+    padding: 30px;
+}
+
+.footer p {
+    color: white;
+}
